--- a/login/register.html
+++ b/login/register.html
@@ -40,7 +40,7 @@
 
       </form>
 
-      <p class="text--center"><a href="#">Sign up now</a> <span class="fontawesome-arrow-right"></span></p>
+      <p class="text--center"><a href="/register">Sign up now</a> <span class="fontawesome-arrow-right"></span></p>
 
     </div>
 
