--- a/login/register.html
+++ b/login/register.html
@@ -35,12 +35,10 @@
         </div>
 
         <div class="form__field">
-          <input type="submit" value="Sign In">
+          <input type="submit" value="Register">
         </div>
 
       </form>
-
-      <p class="text--center"><a href="/register">Sign up now</a> <span class="fontawesome-arrow-right"></span></p>
 
     </div>
 
