--- a/login/register.html
+++ b/login/register.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="form__field">
-          <input type="submit" value="Register" onclick="sendUser">
+          <input type="button" value="Register" onclick="sendUser">
         </div>
 
       </form>
