--- a/login/register.html
+++ b/login/register.html
@@ -2,7 +2,7 @@
 <html >
 
     <script>
-        function myFunction() {
+        function sendUser() {
             alert('New User!');
         }
     </script>
