--- a/login/register.html
+++ b/login/register.html
@@ -45,7 +45,8 @@
       <br><br>
 
       <form method="post" action="/validate" class="form form--login">
-          <input type="hidden" name="codeAdmin" id="codeAdmin" required>
+          <input type="hidden" name="codeAdmin" id="codeAdmin" placeholder="Code verification" required>
+          <input type="submit" value="Verify!">
       </form>
 
     </div>
