--- a/login/register.html
+++ b/login/register.html
@@ -22,12 +22,12 @@
         <p><label> New User </label></p>
         <div class="form__field">
           <label class="fontawesome-user" for="login__username"><span class="hidden">Username</span></label>
-          <input id="login__username" type="text" class="form__input" placeholder="Username" required>
+          <input name="userR" id="login__username" type="text" class="form__input" placeholder="Username" required>
         </div>
 
         <div class="form__field">
           <label class="fontawesome-lock" for="login__password"><span class="hidden">Password</span></label>
-          <input id="login__password" type="password" class="form__input" placeholder="Password" required>
+          <input name="passwordR" id="login__password" type="password" class="form__input" placeholder="Password" required>
         </div>
 
         <div class="form__field">
