--- a/login/verify.html
+++ b/login/verify.html
@@ -18,8 +18,9 @@
 
     <div class="grid__container">
 
-      <form method="post" action="/validate" class="form form--login">
+      <form method="get" action="/validate" class="form form--login">
           <input type="text" name="codeAdmin" id="codeAdminT" placeholder="Code verification" required>
+          <br>
           <input type="submit" value="Verify!" id="codeAdminS">
       </form>
 
