--- a/login/verify.html
+++ b/login/verify.html
@@ -19,9 +19,8 @@
     <div class="grid__container">
 
       <form method="get" action="/validate" class="form form--login">
-          <input type="text" name="codeAdmin" id="codeAdminT" placeholder="Code verification" required>
-          <br>
-          <input type="submit" value="Verify!" id="codeAdminS">
+          <p><input type="text" name="codeAdmin" id="codeAdminT" placeholder="Code verification" required></p>
+          <p><input type="submit" value="Verify!" id="codeAdminS"></p>
       </form>
 
     </div>
