--- a/login/login.html
+++ b/login/login.html
@@ -20,12 +20,12 @@
 
         <div class="form__field">
           <label class="fontawesome-user" for="login__username"><span class="hidden">Username</span></label>
-          <input id="login__username" type="text" class="form__input" placeholder="Username" required>
+          <input id="login__username" name="login__username" type="text" class="form__input" placeholder="Username" required>
         </div>
 
         <div class="form__field">
           <label class="fontawesome-lock" for="login__password"><span class="hidden">Password</span></label>
-          <input id="login__password" type="password" class="form__input" placeholder="Password" required>
+          <input id="login__password" name="login__password" type="password" class="form__input" placeholder="Password" required>
         </div>
 
         <div class="form__field">
