--- a/login/login.html
+++ b/login/login.html
@@ -16,7 +16,7 @@
 
     <div class="grid__container">
 
-      <form action="" method="post" class="form form--login">
+      <form action="/login" method="post" class="form form--login">
 
         <div class="form__field">
           <label class="fontawesome-user" for="login__username"><span class="hidden">Username</span></label>
